# sindicato

./: README.md
episodes/v0.1/: agenda.md
episodes/v1.0/run-length-encoding/: README.md  jest.config.ts  package-lock.json  package.json
episodes/v1.0/run-length-encoding/src/: main.ts
episodes/v1.0/run-length-encoding/test/: main.test.ts
episodes/v1.1/: .gitignore  Makefile  README.md  pyproject.toml
episodes/v1.1/src/: rounding_example_test.py  rounding_property_test.py
episodes/v1.1/src/rounding/: __init__.py  correct_rounding.py  dumb_rounding.py  less_dumb_rounding.py  smart_rounding.py  smarter_rounding.py  somewhat_smart_rounding.py  test_helpers.py
